--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.6.0",
     "nanoid": "^5.1.5",
     "next": "15.2.4",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.4",
