--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
     "@mapbox/search-js-core": "^1.0.0",
+    "@sendinblue/client": "^3.3.1",
+    "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
     "firebase": "^11.6.0",
     "nanoid": "^5.1.5",
