--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@sendinblue/client": "^3.3.1",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
-    "firebase": "^11.6.0",
+    "firebase": "^11.8.1",
     "nanoid": "^5.1.5",
-    "next": "15.2.4",
+    "next": "^15.3.3",
     "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.4",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-table": "^7.8.0",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
