--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
     "@mapbox/search-js-core": "^1.0.0",
-    "@sendinblue/client": "^3.3.1",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
     "firebase": "^11.8.1",
