fix: re-add cron jobs to vercel.json for organiser reminders

--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,12 @@
-{}
+{
+  "crons": [
+    {
+      "path": "/api/checkVotesAndNotifyOrganiser",
+      "schedule": "0 */6 * * *"
+    },
+    {
+      "path": "/api/pollClosedTakeActionReminder",
+      "schedule": "15 */6 * * *"
+    }
+  ]
+}
