--- a/functions/package.json
+++ b/functions/package.json
@@ -10,17 +10,18 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.3.2"
+    "date-fns": "^2.30.0",
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^3.24.1",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "eslint-config-google": "^0.14.0"
   },
   "private": true
 }
