--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.3",
     "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
     "nanoid": "^5.1.5",
     "next": "^15.3.3",
     "nodemailer": "^6.10.0",
