--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -11,36 +11,47 @@
 !.yarn/versions
 
 # testing
-/coverage
+coverage/
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
-/build
+build/
+
+# Firebase
+.firebase/
+service-account.json
+
+# Firebase export tool output (if inside project root or subfolder)
+attendee_contacts_for_brevo.json
+attendee_contacts_for_brevo.csv
+firestore-contact-export/service-account.json
+firestore-contact-export/attendee_contacts_for_brevo.json
+firestore-contact-export/attendee_contacts_for_brevo.csv
 
 # misc
 .DS_Store
 *.pem
 
-# debug
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+*.log
 
-# env files (can opt-in for committing if needed)
+# env files
 .env*
+.env
 
-# vercel
-.vercel
+# Vercel
+.vercel/
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
 
-node_modules/
-.firebase/
-.env
-*.log
+# VS Code
+.vscode/
