--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "nanoid": "^5.1.5",
     "next": "^15.3.3",
     "nodemailer": "^6.10.0",
+    "raw-body": "^2.5.2",
     "react": "^18.2.0",
     "react-day-picker": "^9.6.4",
     "react-dom": "^18.2.0",
     "react-table": "^7.8.0",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
