--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ firestore-contact-export/attendee_contacts_for_brevo.csv
 # misc
 .DS_Store
 *.pem
+__pycache__/
+*.py[cod]
+.venv/
+venv/
 
 # debug logs
 npm-debug.log*
